--- a/app/.htaccess
+++ b/app/.htaccess
@@ -1,5 +1,11 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteRule    ^$    webroot/    [L]
-    RewriteRule    (.*) webroot/$1    [L]
+#    RewriteEngine on
+#    RewriteRule    ^$    webroot/    [L]
+#    RewriteRule    (.*) webroot/$1    [L]
+    RewriteEngine On
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} !(\.[a-zA-Z0-9]{1,5}|/)$
+    #RewriteRule ^(.*)$ http://domain.com/$1/ [L,R=301]
+    RewriteRule ^(.*)$ http://domain.com/$1/ [L,R=301]
 </IfModule>
