--- a/app/webroot/.htaccess
+++ b/app/webroot/.htaccess
@@ -4,3 +4,8 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<IfModule mod_php5.c>
+    php_value max_execution_time 300
+    php_value memory_limit 256M
+</IfModule>
